[package]
name = "affhirm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = {version = "0.17.1", path = "../jsonschema-rs/jsonschema"}
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
