[package]
name = "affhirm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = {git = "https://github.com/whytheplatypus/jsonschema-rs.git", branch = "whytheplatypus/oneOfDiscriminator"}
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
