[package]
name = "affhirm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
jsonschema = {git = "https://github.com/whytheplatypus/jsonschema-rs.git", branch = "whytheplatypus/oneOfDiscriminator"}
# jsonschema = {path = "../jsonschema-rs/jsonschema"}
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
